--- a/FinalProject/package.json
+++ b/FinalProject/package.json
@@ -9,10 +9,14 @@
   },
   "dependencies": {
     "expo": "~36.0.0",
+    "firebase": "^7.12.0",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.0.tar.gz",
-    "react-native-web": "~0.11.7"
+    "react-native-gifted-chat": "^0.13.0",
+    "react-native-web": "~0.11.7",
+    "react-navigation": "^2.18.3",
+    "uuid": "^7.0.2"
   },
   "devDependencies": {
     "babel-preset-expo": "~8.0.0",
