--- a/FinalProject/package.json
+++ b/FinalProject/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "expo": "~36.0.0",
+    "expo-permissions": "^8.1.0",
     "firebase": "^7.12.0",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
